<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="net.lidongdong.bearoil.ui.fragment.FuelConsumptionsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fuel_img1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/baisexiaoyuandian"/>

            <ImageView
                android:id="@+id/fuel_img2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/fuel_rote_select"/>

            <ImageView
                android:id="@+id/fuel_img3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/fuel_rote_select"/>

            <ImageView
                android:id="@+id/fuel_img4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/fuel_rote_select"/>

            <ImageView
                android:id="@+id/fuel_img5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/fuel_rote_select"/>

        </LinearLayout>

        <TextView
            android:id="@+id/fuel_consumptions_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/main_toolbar_margin"
            android:layout_marginTop="@dimen/main_toolbar_margin"
            android:text="@string/fuel_name_chart"
            android:textColor="@color/main_toolbar_tv"
            android:textSize="@dimen/main_toolbar_car_name_sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fuel_consumptions_name_tv"
            android:layout_centerHorizontal="true"
            android:text="@string/fuel_oil_unit"
            android:textColor="@color/main_toolbar_tv"
            android:textSize="@dimen/oil_unit_sp"/>

        <ImageView
            android:id="@+id/fuel_consumptions_left_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/to_left"/>

        <ImageView
            android:id="@+id/fuel_consumptions_right_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/to_right"/>


    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <net.lidongdong.bearoil.ui.view.LinearChartView
            android:id="@+id/chart_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/prompt_tv"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:maxLines="3"
                android:text="@string/prompt_content_str"
                android:textColor="#00ff48"
                android:textSize="@dimen/fuelConsumptions_prompt_sp"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/click_input_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/prompt_tv"
                android:layout_centerHorizontal="true"
                android:text="@string/click_input_str"
                android:visibility="invisible"/>

        </RelativeLayout>


    </FrameLayout>


    <TextView
        android:id="@+id/default_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/toolbar_car_default_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                style="@style/linearLayout_left">

                <TextView
                    style="@style/oil_tv"
                    android:text="@string/avg_oil"/>

                <TextView
                    android:id="@+id/avg_oil_tv"
                    style="@style/oil_data"/>

                <TextView
                    style="@style/oil_tv"
                    android:text="@string/oil_unit"/>

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            style="@style/linearLayout_oil_data">

            <TextView
                style="@style/oil_tv"
                android:text="@string/current_km"/>

            <TextView
                android:id="@+id/current_km_tv"
                style="@style/oil_data"/>

            <TextView
                style="@style/oil_tv"
                android:text="@string/km_unit"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                style="@style/linearLayout_left">

                <TextView
                    style="@style/oil_tv"
                    android:text="@string/max_oil"/>

                <TextView
                    android:id="@+id/max_oil_tv"
                    style="@style/oil_data"/>

                <TextView
                    style="@style/oil_tv"
                    android:text="@string/oil_unit"/>

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            style="@style/linearLayout_oil_data">

            <TextView
                style="@style/oil_tv"
                android:text="@string/all_km"/>

            <TextView
                android:id="@+id/all_km_tv"
                style="@style/oil_data"/>

            <TextView
                style="@style/oil_tv"
                android:text="@string/km_unit"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                style="@style/linearLayout_left">

                <TextView
                    style="@style/oil_tv"
                    android:text="@string/min_oil"/>

                <TextView
                    android:id="@+id/min_oil_tv"
                    style="@style/oil_data"/>

                <TextView
                    style="@style/oil_tv"
                    android:text="@string/oil_unit"/>

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            style="@style/linearLayout_oil_data">

            <TextView
                style="@style/oil_tv"
                android:text="@string/all_oil"/>

            <TextView
                android:id="@+id/all_oil_tv"
                style="@style/oil_data"/>

            <TextView
                style="@style/oil_tv"
                android:text="@string/sh_unit"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                style="@style/linearLayout_left">

                <TextView
                    style="@style/oil_tv"
                    android:text="@string/recent_oil"/>

                <TextView
                    android:id="@+id/recent_oil_tv"
                    style="@style/oil_data"/>

                <TextView
                    style="@style/oil_tv"
                    android:text="@string/oil_unit"/>

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            style="@style/linearLayout_oil_data">

            <TextView
                style="@style/oil_tv"
                android:text="@string/avg_km"/>

            <TextView
                android:id="@+id/avg__km_tv"
                style="@style/oil_data"/>

            <TextView
                style="@style/oil_tv"
                android:text="@string/km_day_unit"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
