<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.lidongdong.bearoil.ui.aty.InputOilRecordsActivity">

    <include layout="@layout/title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_unit"
            style="@style/records_unit"
            android:text="@string/date"/>

        <EditText
            android:id="@+id/records_date_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_unit"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_unit1"
            style="@style/records_unit"
            android:text="@string/odometer"/>

        <EditText
            android:id="@+id/records_odometer_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_unit1"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_unit2"
            style="@style/records_unit"
            android:text="@string/price"/>

        <EditText
            android:id="@+id/records_price_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_unit2"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_unit3"
            style="@style/records_unit"
            android:text="@string/yuan"/>

        <EditText
            android:id="@+id/records_yuan_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_unit3"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/tv_unit4"
            style="@style/records_unit"
            android:text="@string/gassup"/>

        <EditText
            android:id="@+id/records_gassup_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_unit4"/>
    </RelativeLayout>


</LinearLayout>
