<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.lidongdong.bearoil.ui.aty.AddCarActivity">

    <include
        android:id="@+id/title"
        layout="@layout/title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_RadioGroup_height">

        <TextView
            android:id="@+id/tv"
            android:text="@string/carName"
            style="@style/car_manager_name"/>

        <EditText
            android:id="@+id/add_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_RadioGroup_height">

        <TextView
            android:id="@+id/tv1"
            android:text="@string/carBrand"
            style="@style/car_manager_name"/>

        <EditText
            android:id="@+id/add_brand_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv1"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_RadioGroup_height">

        <TextView
            android:id="@+id/tv2"
            style="@style/car_manager_name"
            android:text="@string/carCategory"/>

        <EditText
            android:id="@+id/add_category_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv2"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_RadioGroup_height">

        <TextView
            android:id="@+id/tv3"
            android:text="@string/carModel"
            style="@style/car_manager_name"/>

        <EditText
            android:id="@+id/add_model_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv3"/>
    </RelativeLayout>


</LinearLayout>
